# duckdb-hdf5

./: Cargo.toml  Makefile  README.md  test.h5
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: hdf5_read.test  read_hdf5.test
