[package]
name = "hdf5_extension"
version = "0.1.0"
edition = "2021"

[lib]
name = "hdf5"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "hdf5"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.1.1", features = [
    "vtab-loadable",
    "loadable-extension",
] }
duckdb-loadable-macros = "0.1.3"
