[package]
name = "hdf5_extension"
version = "0.1.1"
edition = "2021"

[lib]
name = "hdf5"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "hdf5"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.2.0", features = [
    "vtab-loadable",
    "loadable-extension",
] }
duckdb-loadable-macros = "0.1.4"
hdf5 = { package = "hdf5-metno", version = "0.9.4" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10.1" }
libz-sys = "1.1.21"

[features]
default = ["static"]
static = ["hdf5/static", "hdf5/zlib", "libz-sys/static"]
